# scorchtop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.claude/skills/verify/: SKILL.md
npm/scorchtop/: README.md  package.json
scripts/: demo-traffic.sh  publish-npm.sh  record-dashboard.sh  record-wrapped.sh  verify.sh
src/: aggregate.rs  cast.rs  history.rs  lib.rs  lines.rs  main.rs  pricing.rs  render.rs  ui.rs  view.rs  watch.rs  wrapped.rs
src/source/: claude_code.rs  mod.rs
tests/: parser.rs
tests/fixtures/cases/-Users-test-alpha/: duplicate_ids.jsonl  torn_last_line.jsonl
tests/fixtures/cases/-Users-test-beta/: malformed_mid.jsonl  unknown_model.jsonl
tests/fixtures/turns/-Users-test-gamma/: session1.jsonl
