[package]
name = "agentop"
version = "0.1.0"
edition = "2021"
description = "btop for AI coding agents — live Claude Code token usage dashboard"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
notify = "8"
# GIF export of the wrapped entrance animation (user-approved additions).
gif = "0.13"
fontdue = "0.9"
